--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Run tests
         run: |
           cd fitness-tracker-client
-          npm test -- --watchAll=false
+          npm test -- --ci --watchAll=false
