--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -12,19 +12,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'npm'
-          cache-dependency-path: fitness-tracker-client/package-lock.json
+          cache: npm
 
-      - name: Install frontend dependencies
-        working-directory: fitness-tracker-client
+      - name: Install dependencies
         run: npm install
 
-      - name: Run frontend tests
-        working-directory: fitness-tracker-client
-        run: npm test -- --ci --watchAll=false
+      - name: Run tests
+        run: npm test -- --watchAll=false
