--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: fitness-tracker-client  # 👈 run all commands inside this folder
+        working-directory: fitness-tracker-client  # All commands run here
 
     steps:
       - name: Checkout code
@@ -26,7 +26,7 @@ jobs:
           cache-dependency-path: fitness-tracker-client/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run tests
         run: npm test -- --ci --watchAll=false
