Add frontend CI workflow 11-08-25

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -10,10 +10,6 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: fitness-tracker-client  # All commands run here
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -23,10 +19,14 @@ jobs:
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: fitness-tracker-client/package-lock.json
+          cache-dependency-path: |
+            fitness-tracker-client/package-lock.json
+            package-lock.json
 
       - name: Install dependencies
+        working-directory: fitness-tracker-client
         run: npm ci
 
       - name: Run tests
+        working-directory: fitness-tracker-client
         run: npm test -- --ci --watchAll=false
